--- a/src/pages/kolko-i-krzyzyk/kolko-i-krzyzyk-1-OPIS-APLIKACJI.astro
+++ b/src/pages/kolko-i-krzyzyk/kolko-i-krzyzyk-1-OPIS-APLIKACJI.astro
@@ -1,13 +1,13 @@
  
 <section>
-    <h1>Kółko-krzyżyk</h1>
-    <p>Aplikacja umożliwia grę w klasyczną grę planszową kółko-krzyżyk, w której dwóch graczy na zmianę wstawia swoje znaki na planszy.</p>
+    <h1>Kółko i Krzyżyk</h1>
+    <p>Aplikacja umożliwia grę w kółko i krzyżyk w ramach prostego interfejsu użytkownika, gdzie dwóch graczy na zmianę stawia swoje symbole na planszy.</p>
     <ul>
-        <li>Umożliwia grę dla dwóch graczy.</li>
-        <li>Obsługuje logikę gry i wyświetla aktualny stan rozgrywki.</li>
-        <li>Informuje o zwycięzcy po zakończeniu gry.</li>
-        <li>Zablokowuje możliwość klikania na zajęte pola lub po zakończeniu gry.</li>
-        <li>Prosty interfejs przyjazny użytkownikowi.</li>
+        <li>Wykrywa zwycięzcę na podstawie układu symboli na planszy.</li>
+        <li>Obsługuje możliwość remisu, kiedy wszystkie pola są zajęte.</li>
+        <li>Umożliwia resetowanie gry po zakończeniu rozgrywki.</li>
+        <li>Wizualizuje aktualny stan gry oraz informuje o tury gracza.</li>
+        <li>Prosty i przejrzysty interfejs użytkownika.</li>
     </ul>
 </section>
  
