--- a/src/pages/kolko-i-krzyzyk/kolko-i-krzyzyk-2-OPIS-APLIKACJI.astro
+++ b/src/pages/kolko-i-krzyzyk/kolko-i-krzyzyk-2-OPIS-APLIKACJI.astro
@@ -1,14 +1,25 @@
  
 <section>
-    <h1>Kółko-krzyżyk</h1>
-    <p>Aplikacja Kółko-krzyżyk to interaktywna gra dla dwóch graczy, która pozwala na rywalizację w klasycznej rozgrywce w kółko-krzyżyk. Gracze na zmianę zaznaczają swoje pola na planszy, aż jeden z nich wygra lub gra się zakończy remisem.</p>
+    <h1>Kółko i Krzyżyk</h1>
+    <p>Aplikacja umożliwia grę w kółko i krzyżyk w ramach prostego interfejsu użytkownika, gdzie dwóch graczy na zmianę stawia swoje symbole na planszy.</p>
     <ul>
-        <li>Intuicyjny interfejs użytkownika, który pozwala łatwo zrozumieć zasady gry.</li>
-        <li>Możliwość rozgrywki dla dwóch graczy.</li>
-        <li>Dynamika gry z natychmiastowym wykrywaniem zwycięzcy.</li>
-        <li>Reaktywność interfejsu, umożliwiająca płynne i wciągające doświadczenie.</li>
-        <li>Prosta i responsywna konstrukcja zapewniająca dostępność na różnych urządzeniach.</li>
-        <li>Możliwość wyświetlania aktualnego statusu gry (kto gra i kto wygrał).</li>
+        <li>Wykrywa zwycięzcę na podstawie układu symboli na planszy.</li>
+        <li>Obsługuje możliwość remisu, kiedy wszystkie pola są zajęte.</li>
+        <li>Umożliwia resetowanie gry po zakończeniu rozgrywki.</li>
+        <li>Wizualizuje aktualny stan gry oraz informuje o turze gracza.</li>
+        <li>Prosty i przejrzysty interfejs użytkownika.</li>
+        <li>Typy TypeScript dla funkcji i stanu aplikacji.</li>
+        <li>Przycisk resetowania zawsze widoczny.</li>
+        <li>Historia gier zapisywana w localStorage.</li>
+        <li>Lista wcześniejszych gier w tabeli pod planszą.</li>
+        <li>Pamięta zwycięzcę po odświeżeniu strony.</li>
+    </ul>
+    <ul>
+        <li>Dodano TypeScript dla lepszej typizacji.</li>
+        <li>Zmieniono sposób resetowania gry, przycisk jest zawsze widoczny.</li>
+        <li>Dodano funkcjonalność zapisywania wyników gier w localStorage.</li>
+        <li>Wprowadzono tabelę z historią gier, pokazującą datę, zwycięzcę i liczbę ruchów.</li>
+        <li>Pamięta zwycięzcę rozgrywki między odświeżeniami strony.</li>
     </ul>
 </section>
  
