--- a/src/pages/video-generator/index.astro
+++ b/src/pages/video-generator/index.astro
@@ -1,16 +1,21 @@
 ---
-const elements = 22;
-const versions = Array.from({ length: elements }, (_, index) => index + 1).reverse()
+import Layout from '../../layouts/Layout.astro';
+const elements = 6;
+const versions = Array.from({ length: elements }, (_, index) => index + 1).reverse();
+const APP_NAME = "video-generator";
 ---
 
+<Layout>
 <div>
   <ul>
     {
       versions.map((version) => (
         <li>
-          {version}. <a href={`/video-generator/version/video-generator-${version}`}>versia {version}</a>
+          <a href={`/${APP_NAME}/${APP_NAME}-${version}`}>wersja {version}</a>
+          <br />
         </li>
       ))
     }
   </ul>
 </div>
+</Layout>
