added multiple videos react

--- a/src/components/MichalWelcome.astro
+++ b/src/components/MichalWelcome.astro
@@ -31,8 +31,11 @@ import background from "../assets/background.svg";
         <p>
           <a class="button" href="/video-generator">video generator</a>
         </p>
-                <p>
+        <p>
           <a class="button" href="/kolko-i-krzyzyk">kolko i krzyzyk</a>
+        </p>
+        <p>
+          <a class="button" href="/multiple-videos-react">multiple videos react</a>
         </p>
       </section>
     </section>
