added video-cutter app

--- a/src/components/MichalWelcome.astro
+++ b/src/components/MichalWelcome.astro
@@ -22,6 +22,9 @@ import background from "../assets/background.svg";
       </section>
 
       <section>
+                <p>
+          <a class="button" href="/video-cutter">video cutter</a>
+        </p>
         <p>
           <a class="button" href="/youtube-thumbnail-generator">youtube thumbnail generator</a>
         </p>
