--- a/src/pages/youtube-thumbnail-generator/index.astro
+++ b/src/pages/youtube-thumbnail-generator/index.astro
@@ -13,7 +13,7 @@ const createDataForBranch19 = (prompt: number, broken = "") => {
   return dataArr;
 };
 
-const DATA = [  createDataForBranch19(12),
+const DATA = [  createDataForBranch19(13),createDataForBranch19(12),
   createDataForBranch19(11),
   createDataForBranch19(10),
   createDataForBranch19(9, "BROKEN"),
