--- a/src/components/MichalWelcome.astro
+++ b/src/components/MichalWelcome.astro
@@ -22,7 +22,10 @@ import background from "../assets/background.svg";
       </section>
 
       <section>
-                <p>
+        <p>
+          <a class="button" href="/cv">cv</a>
+        </p>
+        <p>
           <a class="button" href="/video-cutter">video cutter</a>
         </p>
         <p>
