working on video editor

--- a/src/components/MichalWelcome.astro
+++ b/src/components/MichalWelcome.astro
@@ -26,7 +26,7 @@ import background from "../assets/background.svg";
           <a class="button" href="/cv">cv</a>
         </p>
         <p>
-          <a class="button" href="/video-cutter">video cutter</a>
+          <a class="button" href="/video-editor">video editor</a>
         </p>
         <p>
           <a class="button" href="/youtube-thumbnail-generator">youtube thumbnail generator</a>
@@ -35,7 +35,7 @@ import background from "../assets/background.svg";
           <a class="button" href="/image-editor">image editor</a>
         </p>
         <p>
-          <a class="button" href="/video-generator">video generator</a>
+          <a class="button" href="/image-to-video">image to video</a>
         </p>
         <p>
           <a class="button" href="/kolko-i-krzyzyk">kolko i krzyzyk</a>
