working on vc generator

--- a/src/components/MichalWelcome.astro
+++ b/src/components/MichalWelcome.astro
@@ -23,7 +23,7 @@ import background from "../assets/background.svg";
 
       <section>
         <p>
-          <a class="button" href="/cv">cv</a>
+          <a class="button" href="/cv-generator">cv generator</a>
         </p>
         <p>
           <a class="button" href="/video-editor">video editor</a>
